Koleksi sedikit lgi

--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -328,7 +328,7 @@ text-align: left;
 }
 
 .tentang .tentang-desc {
-font-size: 1rem;
+font-size: 0.9rem;
 color: #ffffff;
 letter-spacing: 0.05em;
 text-align: center;
@@ -352,7 +352,6 @@ text-align: center; }
 .about .about-content .about-title {
 font-weight: 700;
 font-size: 3.3rem;
-
 text-align: center; }
 }
 
@@ -455,7 +454,7 @@ color: #ffffff;
 
 .koleksi-desc {
   margin: 0.5rem 0 0 0;
-  font-size: 0.5rem;
+  font-size: 1rem;
 }
 
 /* DESKTOP 992px+ */
@@ -474,12 +473,12 @@ color: #ffffff;
 
   .koleksi .koleksi-kiri {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
   }
 
   .koleksi .koleksi-kanan {
     width: 100%;
-    height: 48.4vh;
+    height: 43.7vh;
   }
 
   .koleksi .koleksi-kiri .koleksi-item-a,
@@ -488,7 +487,7 @@ color: #ffffff;
   }
 
   .blur-cover-kiri {
-    height: 50vh;
+    height: 25vh;
   }
 
   .blur-cover-kanan {
@@ -503,11 +502,14 @@ color: #ffffff;
 
   .koleksi .koleksi-content .koleksi-title {
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.7rem;
     text-align: left;
     color: #ffffff;
   }
-
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.9rem;
+      text-align: left;
+    }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -567,7 +569,10 @@ color: #ffffff;
     text-align: center;
     color: #ffffff;
   }
-
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 1rem;
+      text-align: center;
+    }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -599,11 +604,11 @@ color: #ffffff;
   }
 
   .blur-cover-kiri {
-    height: 35vh;
+    height: 30vh;
   }
 
   .blur-cover-kanan {
-    height: 35vh;
+    height: 30vh;
   }
 
   .koleksi .koleksi-content .koleksi-title-head {
@@ -618,6 +623,10 @@ color: #ffffff;
     text-align: center;
     color: #ffffff;
   }
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.9rem;
+      text-align: center;
+    }
 
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 10px;
@@ -648,26 +657,33 @@ color: #ffffff;
   }
 
   .blur-cover-kiri {
-    height: 25vh;
+    height: 24vh;
   }
 
   .blur-cover-kanan {
-    height: 25vh;
+    height: 24vh;
   }
 
   .koleksi .koleksi-content .koleksi-title-head {
     font-weight: 700;
     font-size: 2rem;
-    text-align: left;
+    text-align: center;
   }
 
   .koleksi .koleksi-content .koleksi-title {
     font-weight: 700;
-    font-size: 2.4rem;
+    font-size: 1.1rem;
     text-align: center;
   }
+
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.8rem;
+      text-align: center;
+    }
 
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 10px;
   }
+
+    
 }
