--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -20,6 +20,7 @@ body {
 .navbar-custom.solid {
   background-color: #ffffff;
   color: #000000;
+  
 }
 
 .custom-link {
@@ -59,6 +60,8 @@ body {
   transition-property: width, left;
 }
 
+
+
 /* mobile navbar */
 
 .navbar {
@@ -68,7 +71,7 @@ body {
   background-color: transparent !important;
   box-shadow: none;
 }
-.text-nav {
+.text-nav{
   font-weight: bolder;
   color: #000000;
   text-transform: uppercase;
@@ -108,6 +111,7 @@ body {
 .nav-link:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
+
 
 .btn-koleksi {
   outline: none;
@@ -161,19 +165,20 @@ body {
   transform: translate3d(100%, 0, 0);
 }
 
+
 .btn-daftar {
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   position: relative;
   letter-spacing: 0.05rem;
-  font-weight: 700;
-  font-size: 17px;
-  border-radius: 500px;
-  padding: 0.9rem 1.8rem;
+    font-weight: 700;
+    font-size: 17px;
+    border-radius: 500px;
+    padding: 0.90rem 1.8rem;
   text-align: center;
   letter-spacing: 1px;
-  text-decoration: none;
+  text-decoration: none ;
   color: #ffffff;
   background: transparent;
   cursor: pointer;
@@ -190,6 +195,7 @@ body {
 .btn-daftar:active {
   transform: scale(0.9);
 }
+
 
 .btn-login {
   letter-spacing: 2px;
@@ -215,7 +221,7 @@ body {
   right: 50%;
   bottom: 0;
   opacity: 0;
-  content: "";
+  content: '';
   border-radius: 500px;
   background-color: #da8d00;
   z-index: -1;
@@ -238,6 +244,7 @@ body {
   transform: scale(0.9);
 }
 @media (max-width: 575.98px) {
+
   .btn-koleksi {
     padding: 0.5rem 1rem;
     font-size: 10px;
@@ -262,12 +269,10 @@ body {
 .overlay-a {
   text-decoration: none;
   background: linear-gradient(
-    linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.2) 0%,
-      rgba(0, 0, 0, 0.25) 30%,
-      rgba(0, 0, 0, 0.3) 100%
-    )
+    linear-gradient(to bottom,
+        rgba(0, 0, 0, 0.2) 0%,
+        rgba(0, 0, 0, 0.25) 30%,
+        rgba(0, 0, 0, 0.3) 100%)
   );
 }
 
@@ -389,6 +394,7 @@ body {
     font-size: 2.7rem;
     text-align: center;
   }
+  
 }
 
 @media (min-width: 768px) {
@@ -396,6 +402,7 @@ body {
     font-size: 1rem;
     text-align: center;
   }
+
 }
 
 @media (min-width: 992px) {
@@ -407,11 +414,11 @@ body {
     font-size: 1rem;
     text-align: left;
     white-space: normal;
-    word-break: normal;
+      word-break: normal;
   }
 }
 /* Kelebihan */
-.kelebihan .kelebihan-title h3 {
+.kelebihan .kelebihan-title h3{
   font-size: 2.8rem;
   background: linear-gradient(to right, #44291a, #a15c48, #f7d6cf);
     -webkit-background-clip: text;
@@ -435,8 +442,9 @@ body {
   padding: 32px;
   overflow: hidden;
   border-radius: 10px;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
+
 
 .card-custom .content {
   display: flex;
@@ -444,13 +452,13 @@ body {
   align-items: flex-start;
   gap: 20px;
   color: #000000;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .card-custom .content .heading {
   font-weight: 700;
   font-size: 32px;
-}
+} 
 
 .card-custom .content .para {
   line-height: 1.5;
@@ -465,7 +473,7 @@ body {
   height: 100%;
   background: linear-gradient(-45deg, #f89b29 0%, #be7c00 100%);
   z-index: -1;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .card-custom:hover::before {
@@ -475,6 +483,12 @@ body {
 .card-custom:hover {
   box-shadow: none;
 }
+
+
+
+
+
+
 
 /* Tentang */
 .about .about-content .about-title {
@@ -486,6 +500,7 @@ body {
     -webkit-text-fill-color: transparent;
 }
 .about .about-content .about-desc {
+
   font-size: 1rem;
   text-align: center;
 }
@@ -535,10 +550,10 @@ body {
 }
 
 .tentang .tentang-desc {
-  font-size: 0.9rem;
-  color: #ffffff;
-  letter-spacing: 0.05em;
-  text-align: center;
+font-size: 0.9rem;
+color: #ffffff;
+letter-spacing: 0.05em;
+text-align: center;
 }
 
 .tentang .tentang-title {
@@ -549,19 +564,18 @@ body {
 }
 
 @media (min-width: 576px) {
-  .tentang .tentang-title {
-    font-size: 2.9rem;
-    text-align: center;
-  }
-  .tentang .tentang-desc {
-    color: #ffffff;
-    text-align: center;
-  }
-  .about .about-content .about-title {
-    font-weight: 700;
-    font-size: 3.3rem;
-    text-align: center;
-  }
+.tentang .tentang-title {
+font-size: 2.9rem;
+text-align: center;
+}
+.tentang .tentang-desc {
+color: #ffffff;
+text-align: center; }
+.about .about-content .about-title {
+font-weight: 700;
+font-size: 3.3rem;
+text-align: center; }
+
 }
 
 @media (min-width: 992px) {
@@ -578,10 +592,10 @@ body {
     font-size: 2.9rem;
     text-align: left;
   }
-  .about .about-content .about-desc {
-    font-size: 1.1rem;
-    text-align: left;
-  }
+    .about .about-content .about-desc {
+  
+      font-size: 1.1rem;
+      text-align: left; }
 }
 
 .tutorial .tutorial-container {
@@ -601,19 +615,16 @@ body {
 .tutorial .tutorial-item:last-child {
   padding-bottom: 0;
 }
-.tutorial .tutorial-title h2 {
+.tutorial .tutorial-title h2{
   font-weight: 700;
-  font-size: 3.5rem;
-  text-align: center;
+    font-size: 3.5rem;
+    text-align: center;
 }
 .tutorial .tutorial-item .content {
   width: 100%;
   position: relative;
-  background: linear-gradient(
-    145deg,
-    color-mix(in srgb, #be7c00, transparent 75%)
-  );
-  border: 2px solid color-mix(in srgb, #da8d00, transparent 55%);
+  background: linear-gradient(145deg, color-mix(in srgb, #be7c00, transparent 75%));
+    border: 2px solid color-mix(in srgb, #da8d00, transparent 55%);
   border-radius: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -624,12 +635,8 @@ body {
 }
 
 .tutorial .tutorial-item .content:hover .tutorial-icon {
-  background: linear-gradient(
-    135deg,
-    color-mix(in srgb, #da8d00, transparent 100%),
-    #da8d00
-  );
-  transform: rotate(10deg);
+  background: linear-gradient(135deg, color-mix(in srgb, #da8d00, transparent 100%), #da8d00);
+    transform: rotate(10deg);
 }
 
 .tutorial .tutorial-item .content:hover .tutorial-number {
@@ -666,14 +673,14 @@ body {
   display: grid;
   place-items: center;
   transition: all 0.3s ease;
-  box-shadow: 0 5px 15px
-    color-mix(in srgb, var(--accent-color), transparent 70%);
+  box-shadow: 0 5px 15px color-mix(in srgb, var(--accent-color), transparent 70%);
 }
 
 .tutorial .tutorial-item .tutorial-icon i {
   font-size: 2rem;
   color: #ffffff;
 }
+
 
 .tutorial .tutorial-item .tutorial-content p {
   color: black;
@@ -690,6 +697,7 @@ body {
   font-weight: 700;
   margin: 0;
 }
+
 
 @media (max-width: 767.98px) {
   .tutorial .tutorial-container {
@@ -737,7 +745,6 @@ body {
     font-size: 1.75rem;
   }
 
-
   
   
 }
@@ -749,28 +756,12 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   text-align: center; }
+
     .tutorial .tutorial-title p {
       font-style: italic;
       font-weight: 700;
     }
 
-}
-
-
-.koleksi .koleksi-content .koleksi-title-head {
-  font-weight: 700;
-  font-size: 2rem;
-  text-align: center;
-  background: linear-gradient(to right, #44291a, #a15c48, #f7d6cf);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.koleksi .koleksi-content .koleksi-title {
-  font-weight: 700;
-  font-size: 2rem;
-  text-align: center;
-  color: #ffffff;
-}
 
 /* GLOBAL */
 .koleksi {
@@ -832,7 +823,14 @@ body {
   bottom: 8px;
   right: 8px;
 }
-
+.koleksi .koleksi-content .koleksi-title-head {
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: center;
+  background: linear-gradient(to right, #44291a, #a15c48, #f7d6cf);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .koleksi-title {
   margin: 0;
   font-size: 0.5rem;
@@ -886,10 +884,10 @@ body {
     text-align: left;
     color: #ffffff;
   }
-  .koleksi .koleksi-content .koleksi-desc {
-    font-size: 0.9rem;
-    text-align: left;
-  }
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.9rem;
+      text-align: left;
+    }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -949,10 +947,10 @@ body {
     text-align: center;
     color: #ffffff;
   }
-  .koleksi .koleksi-content .koleksi-desc {
-    font-size: 0.9;
-    text-align: center;
-  }
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.9;
+      text-align: center;
+    }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -1001,10 +999,10 @@ body {
     text-align: center;
     color: #ffffff;
   }
-  .koleksi .koleksi-content .koleksi-desc {
-    font-size: 0.9rem;
-    text-align: center;
-  }
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.9rem;
+      text-align: center;
+    }
 
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 10px;
@@ -1054,16 +1052,18 @@ body {
     text-align: center;
   }
 
-  .koleksi .koleksi-content .koleksi-desc {
-    font-size: 0.8rem;
-    text-align: center;
-  }
+    .koleksi .koleksi-content .koleksi-desc {
+      font-size: 0.8rem;
+      text-align: center;
+    }
 
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 10px;
   }
-}
 
+
+    
+}
 
 
 /*styling Testimony*/
@@ -1294,4 +1294,3 @@ footer .h1{
   width: 100px;
   height: auto;
 }
-
