--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -246,12 +246,12 @@ body {
 @media (max-width: 575.98px) {
 
   .btn-koleksi {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     font-size: 10px;
   }
 
   .btn-daftar {
-    padding: 0.37rem 1rem;
+    padding: 0.37rem 0.5rem;
     font-size: 10px;
   }
 
@@ -365,14 +365,18 @@ body {
 }
 
 .intro-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 2rem;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
   box-sizing: border-box;
 }
-
 .intro .intro-desc {
   font-size: 0.9rem;
   color: #ffffff;
@@ -438,6 +442,8 @@ body {
   align-items: center;
   justify-content: center;
   /* width: 320px; */
+  min-height: 300px;
+
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   padding: 32px;
   overflow: hidden;
@@ -450,14 +456,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: 10px;
   color: #000000;
   transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .card-custom .content .heading {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 25px;
 } 
 
 .card-custom .content .para {
@@ -842,6 +848,7 @@ text-align: center; }
 }
 .koleksi-foot{
   color: #000000;
+  text-align: center;
 }
 
 /* =============== 992px ke atas (desktop) =============== */
@@ -891,6 +898,9 @@ text-align: center; }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
+    .koleksi-foot {
+      color: #000000;
+      text-align: left; }
 }
 
 /* TABLET 768px - 991px */
@@ -951,6 +961,9 @@ text-align: center; }
       font-size: 0.9;
       text-align: center;
     }
+        .koleksi-foot {
+          color: #000000;
+          text-align: center;   }
   .koleksi .koleksi-kanan:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -983,7 +996,9 @@ text-align: center; }
   .blur-cover-kiri {
     height: 30vh;
   }
-
+    .koleksi-foot {
+      color: #000000;
+      text-align: center; }
   .blur-cover-kanan {
     height: 30vh;
   }
@@ -1051,7 +1066,9 @@ text-align: center; }
     font-size: 1.1rem;
     text-align: center;
   }
-
+    .koleksi-foot {
+      color: #000000;
+      text-align: center; }
     .koleksi .koleksi-content .koleksi-desc {
       font-size: 0.8rem;
       text-align: center;
@@ -1082,6 +1099,60 @@ text-align: center; }
   text-align: center;
 }
 
+.btn-selengkapnya {
+  height: 2.8em;
+  width: 9em;
+  background: transparent;
+  -webkit-animation: jello-horizontal 0.9s both;
+  animation: jello-horizontal 0.9s both;
+  border: 2px solid #be7c00;
+  outline: none;
+  color: #da8d00;
+  cursor: pointer;
+}
+
+.btn-selengkapnya:hover {
+  background: #be7c00;
+  color: #ffffff;
+  animation: squeeze3124 0.9s both;
+}
+
+@keyframes squeeze3124 {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
 .slide-modal {
   display: flex;
   justify-content: center;
@@ -1091,6 +1162,11 @@ text-align: center; }
   padding-right: 3rem;
 }
 @media (max-width: 576px) {
+  .btn-selengkapnya{
+    height: 2em;
+      width: 8em;
+      font-size: 13px;
+  }
   .testimony-section {
     padding: 0; /* atau 0 kalau kamu mau hilangin total */
   }
