--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -6,7 +6,7 @@
 body {
   background-color: #f5f5f5;
   font-family: "Monserat", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .navbar-custom {
